[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Player/hand_holding_gun.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Weapons/muzzle_flash_02.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/forearm.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/arm.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Weapons/pistol.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Weapons/Weapons/WeaponPistol.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "MuzzleFlash"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("muzzle_flash_02:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("muzzle_flash_02:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.4, 0.2 ) ]
}

[node name="WeaponPistol" type="Node2D"]
script = ExtResource( 6 )
weapon_range = 10000

[node name="armL" type="Sprite" parent="."]
position = Vector2( 23.742, -50.0112 )
rotation = 0.610865
texture = ExtResource( 4 )

[node name="forearmL" type="Sprite" parent="armL"]
position = Vector2( 49.4389, 0.326096 )
z_index = -1
texture = ExtResource( 3 )

[node name="handL" type="Sprite" parent="armL/forearmL"]
position = Vector2( 32.3609, 4.96817 )
scale = Vector2( 0.662, 0.862 )
z_index = -1
texture = ExtResource( 1 )

[node name="armR" type="Sprite" parent="."]
position = Vector2( 33.6814, 54.5416 )
rotation = -0.610865
texture = ExtResource( 4 )
flip_v = true

[node name="forearmR" type="Sprite" parent="armR"]
position = Vector2( 41.4172, -2.13701 )
z_index = -1
texture = ExtResource( 3 )
flip_v = true

[node name="handR" type="Sprite" parent="armR/forearmR"]
position = Vector2( 33.6595, -4.69916 )
scale = Vector2( 0.662, 0.862 )
z_index = -1
texture = ExtResource( 1 )
flip_v = true

[node name="Pistol" type="Sprite" parent="armR/forearmR/handR"]
position = Vector2( 22.3864, 2.29084 )
rotation = 0.506145
texture = ExtResource( 5 )

[node name="muzzle_flash_02" type="Sprite" parent="."]
position = Vector2( 132.639, -0.297409 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
offset = Vector2( 98.0151, 2.97409 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MuzzleFlash = SubResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="BulletSpawnPosition" type="Position2D" parent="."]
position = Vector2( 90.7689, 0 )

[node name="BulletDirection" type="Position2D" parent="."]
position = Vector2( 130.147, 0 )

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
